syntax = "proto3";
package models;
option go_package = "./models";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";

message LogCountByAddress {
  option (gorm.opts) = {ormable: true};

  string transaction_hash = 1 [(gorm.field).tag = {index: "log_count_by_address_idx_transaction_hash"}];
  string address = 2 [(gorm.field).tag = {index: "log_count_by_address_idx_address"}];
}
